--- a/index.html
+++ b/index.html
@@ -4,188 +4,231 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AvantQuest - Roblox Development Group</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        /* General Reset */
+        * {
             margin: 0;
             padding: 0;
-            background: linear-gradient(to right, #4e54c8, #8f94fb);
-            color: white;
-            overflow: hidden;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            background: linear-gradient(135deg, #1f1c2c, #928dab);
+            color: #fff;
+            overflow-x: hidden;
+        }
+
+        a {
+            text-decoration: none;
+            color: #ff9f43;
+            transition: color 0.3s ease-in-out;
+        }
+
+        a:hover {
+            color: #f368e0;
         }
 
         header {
-            background: rgba(0, 0, 0, 0.7);
-            padding: 20px;
-            text-align: center;
-            position: relative;
-        }
-
-        nav ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        nav ul li {
-            display: inline;
-            margin: 0 15px;
-        }
-
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            transition: color 0.3s;
-        }
-
-        nav ul li a:hover {
-            color: #ffcc00; /* Change color on hover */
-        }
-
-        section {
-            padding: 20px;
-            margin: 20px;
-            background: rgba(0, 0, 0, 0.5);
-            border-radius: 10px;
-        }
-
-        footer {
-            text-align: center;
-            padding: 10px;
-            background: rgba(0, 0, 0, 0.7);
-        }
-
-        #particle-container {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-        }
-
-        .particle {
-            position: absolute;
-            width: 10px;
-            height: 10px;
-            background: rgba(255, 255, 255, 0.8);
-            border-radius: 50%;
-            pointer-events: none;
-        }
-
-        #settings {
+            background: rgba(0, 0, 0, 0.6);
+            backdrop-filter: blur(10px);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1rem 3rem;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
             position: fixed;
-            top: 20px;
-            right: 20px;
-            background: rgba(0, 0, 0, 0.7);
-            padding: 10px;
+            width: 100%;
+            z-index: 1000;
+        }
+
+        .logo {
+            font-size: 2rem;
+            font-weight: bold;
+            color: #ff9f43;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+        }
+
+        .nav-bar a {
+            margin-left: 2rem;
+            font-size: 1.1rem;
+            color: #fff;
+            padding: 0.5rem 1rem;
+            transition: background 0.3s ease, color 0.3s ease;
             border-radius: 5px;
         }
 
-        #settings button {
-            background: #ffcc00;
-            border: none;
-            padding: 5px 10px;
-            cursor: pointer;
+        .nav-bar a:hover {
+            background: #ff9f43;
+            color: #1f1c2c;
         }
 
-        #settings button:hover {
-            background: #ffd700;
+        #hero {
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            background: url('https://source.unsplash.com/1920x1080/?gaming,technology') no-repeat center center/cover;
+            filter: brightness(90%);
+            position: relative;
+        }
+
+        #hero h1 {
+            font-size: 4rem;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+            margin-bottom: 1rem;
+        }
+
+        #hero p {
+            font-size: 1.5rem;
+            margin-bottom: 2rem;
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 1rem 2rem;
+            background: #ff9f43;
+            color: #1f1c2c;
+            font-weight: bold;
+            border-radius: 30px;
+            transition: background 0.3s ease, transform 0.2s;
+        }
+
+        .btn:hover {
+            background: #f368e0;
+            transform: translateY(-5px);
+        }
+
+        section {
+            padding: 4rem 3rem;
+            text-align: center;
+        }
+
+        footer {
+            background: rgba(0, 0, 0, 0.7);
+            padding: 1rem;
+            text-align: center;
+            color: #fff;
+        }
+
+        /* Additional Sections */
+        .about, .games, .community, .contact {
+            background: rgba(255, 255, 255, 0.1);
+            margin: 2rem auto;
+            padding: 2rem;
+            border-radius: 10px;
+            max-width: 1200px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+        }
+
+        .about h2, .games h2, .community h2, .contact h2 {
+            font-size: 2.5rem;
+            margin-bottom: 1.5rem;
+            color: #ff9f43;
+            text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);
+        }
+
+        .about p, .games p, .community p, .contact p {
+            font-size: 1.2rem;
+            margin-bottom: 1rem;
+            color: #ddd;
+        }
+
+        .games img {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+            margin-bottom: 1rem;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+        }
+
+        .community ul {
+            list-style: none;
+            display: flex;
+            justify-content: center;
+        }
+
+        .community ul li {
+            margin: 0 1rem;
+            font-size: 1.2rem;
+            background: #ff9f43;
+            padding: 0.5rem 1rem;
+            border-radius: 5px;
+            transition: transform 0.3s;
+        }
+
+        .community ul li:hover {
+            transform: scale(1.1);
+            background: #f368e0;
+        }
+
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
     </style>
 </head>
 <body>
-    <div id="particle-container"></div>
-
     <header>
-        <h1>AvantQuest</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#community">Community</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#login">Staff Login</a></li>
-            </ul>
+        <div class="logo">AvantQuest</div>
+        <nav class="nav-bar">
+            <a href="#hero">Home</a>
+            <a href="#about">About</a>
+            <a href="#games">Our Games</a>
+            <a href="#community">Community</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
 
     <main>
-        <section id="home">
-            <h2>Welcome to AvantQuest</h2>
-            <p>Your adventure in Roblox development starts here!</p>
+        <section id="hero" class="fade-in">
+            <h1>Welcome to AvantQuest!</h1>
+            <p>Your premier Roblox development team, crafting worlds like never before.</p>
+            <a href="#games" class="btn">Explore Our Games</a>
+            <a href="#community" class="btn">Join Our Community</a>
         </section>
 
-        <section id="about">
+        <section id="about" class="about fade-in">
             <h2>About Us</h2>
-            <p>We are a passionate group of Roblox developers dedicated to creating immersive experiences.</p>
+            <p>AvantQuest is a leading Roblox development group specializing in immersive game design and innovation. Our team works tirelessly to create the best gaming experiences for the Roblox platform.</p>
         </section>
 
-        <section id="projects">
-            <h2>Our Projects</h2>
-            <p>Check out our latest games on Roblox!</p>
+        <section id="games" class="games fade-in">
+            <h2>Our Games</h2>
+            <img src="https://source.unsplash.com/1200x600/?game,roblox" alt="Game Showcase">
+            <p>We design and develop games that push the limits of creativity and engagement. From RPGs to simulators, we create experiences that players will love.</p>
         </section>
 
-        <section id="community">
+        <section id="community" class="community fade-in">
             <h2>Community</h2>
-            <p>Join our Discord server!</p>
-            <a href="https://discord.gg/yourdiscordlink" style="color: #ffcc00;">Join Discord</a>
-            <div id="public-posts">
-                <h3>Public Posts</h3>
-                <p>Latest announcements...</p>
-            </div>
+            <p>Join our community and connect with other players, developers, and fans. Be a part of something great!</p>
+            <ul>
+                <li>Events</li>
+                <li>Forums</li>
+                <li>Discord</li>
+                <li>Contests</li>
+            </ul>
         </section>
 
-        <section id="contact">
+        <section id="contact" class="contact fade-in">
             <h2>Contact Us</h2>
-            <form id="contact-form">
-                <input type="text" placeholder="Your Name" required>
-                <input type="email" placeholder="Your Email" required>
-                <textarea placeholder="Your Message" required></textarea>
-                <button type="submit">Send</button>
-            </ form>
-        </section>
-
-        <section id="login">
-            <h2>Staff Login</h2>
-            <form id="login-form">
-                <input type="text" placeholder="Username" required>
-                <input type="password" placeholder="Password" required>
-                <button type="submit">Login</button>
-            </form>
+            <p>Have any questions or inquiries? Reach out to us and we'll get back to you as soon as possible!</p>
+            <a href="mailto:support@avantquest.com" class="btn">Email Us</a>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2023 AvantQuest. All rights reserved.</p>
+        <p>&copy; 2024 AvantQuest | Designed with passion for gaming innovation.</p>
     </footer>
-
-    <script>
-        const particleContainer = document.getElementById('particle-container');
-
-        document.addEventListener('mousemove', (e) => {
-            const particle = document.createElement('div');
-            particle.className = 'particle';
-            particle.style.left = `${e.pageX}px`;
-            particle.style.top = `${e.pageY}px`;
-            particleContainer.appendChild(particle);
-
-            setTimeout(() => {
-                particle.remove();
-            }, 1000);
-        });
-
-        document.getElementById('contact-form').addEventListener('submit', (e) => {
-            e.preventDefault();
-            alert('Message sent!');
-            e.target.reset();
-        });
-
-        document.getElementById('login-form').addEventListener('submit', (e) => {
-            e.preventDefault();
-            alert('Login successful!');
-            e.target.reset();
-        });
-    </script>
 </body>
 </html>
