--- a/index.html
+++ b/index.html
@@ -4,106 +4,182 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AvantQuest | Roblox Development Group</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
-            padding: 0;
-            color: #ffffff;
-            background-color: #1a1a1a;
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(135deg, #1e1e2f, #3a3a5e);
+            color: #fff;
+            overflow-x: hidden;
         }
+
         header {
-            background: linear-gradient(to right, #4e54c8, #8f94fb);
-            padding: 20px;
-            text-align: center;
-        }
-        header h1 {
-            font-size: 3rem;
-        }
-        nav {
-            text-align: center;
-            margin: 20px 0;
-        }
-        nav a {
-            color: #ffffff;
-            text-decoration: none;
-            margin: 0 15px;
-            font-size: 1.2rem;
-        }
-        nav a:hover {
-            text-decoration: underline;
-        }
-        section {
-            padding: 50px;
-            text-align: center;
-        }
-        .about, .games, .discord {
-            background-color: #282c34;
-            margin: 20px auto;
-            border-radius: 10px;
-            padding: 40px;
-            max-width: 800px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-        }
-        .section-title {
-            font-size: 2.5rem;
-            margin-bottom: 20px;
-        }
-        .btn {
-            display: inline-block;
+            position: sticky;
+            top: 0;
+            background: rgba(0, 0, 0, 0.8);
             padding: 10px 20px;
-            color: #ffffff;
-            background: #4e54c8;
-            border: none;
-            border-radius: 5px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            z-index: 1000;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        header h1 {
+            font-size: 24px;
+            font-weight: 600;
+        }
+
+        header nav {
+            display: flex;
+            gap: 15px;
+        }
+
+        header nav a {
             text-decoration: none;
-            font-size: 1rem;
-            transition: background 0.3s;
+            color: #fff;
+            font-weight: 400;
+            transition: color 0.3s;
         }
-        .btn:hover {
-            background: #8f94fb;
+
+        header nav a:hover {
+            color: #ff66cc;
         }
-        footer {
-            background: #333;
-            padding: 20px;
+
+        section {
+            padding: 60px 20px;
             text-align: center;
+            position: relative;
+        }
+
+        .hero {
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background: linear-gradient(180deg, rgba(0,0,0,0.9), rgba(0,0,0,0.6)), url('https://via.placeholder.com/1920x1080') no-repeat center center/cover;
+            color: #fff;
+        }
+
+        .hero h2 {
+            font-size: 3rem;
+            margin-bottom: 10px;
+            animation: fadeIn 1.5s ease-in-out;
+        }
+
+        .hero p {
+            font-size: 1.2rem;
+            max-width: 800px;
+            margin: 0 auto;
+            animation: fadeIn 2s ease-in-out;
+        }
+
+        .content {
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 20px;
+            padding: 40px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+            margin: 40px auto;
+            max-width: 800px;
+            text-align: left;
+            animation: slideIn 1.5s ease-in-out;
+        }
+
+        .semi-circle {
+            position: absolute;
+            top: -100px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 200px;
+            height: 100px;
+            background: linear-gradient(45deg, rgba(255, 102, 204, 0.7), rgba(102, 102, 255, 0.7));
+            border-radius: 50% 50% 0 0;
+            filter: blur(15px);
+        }
+
+        .fade-in {
+            opacity: 0;
+            animation: fadeIn 2s forwards;
+        }
+
+        footer {
+            background: rgba(0, 0, 0, 0.9);
+            text-align: center;
+            padding: 20px 0;
+            font-size: 0.9rem;
+            color: #aaa;
+        }
+
+        @keyframes fadeIn {
+            0% { opacity: 0; }
+            100% { opacity: 1; }
+        }
+
+        @keyframes slideIn {
+            0% { transform: translateY(50px); opacity: 0; }
+            100% { transform: translateY(0); opacity: 1; }
+        }
+
+        @media (max-width: 768px) {
+            .hero h2 {
+                font-size: 2rem;
+            }
+
+            .hero p {
+                font-size: 1rem;
+            }
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to AvantQuest</h1>
-        <p>Your go-to Roblox development team for amazing experiences.</p>
+        <h1>AvantQuest</h1>
+        <nav>
+            <a href="#about">About Us</a>
+            <a href="#services">Services</a>
+            <a href="#team">Team</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </header>
-    <nav>
-        <a href="#about">About Us</a>
-        <a href="#games">Our Games</a>
-        <a href="#discord">Join Our Discord</a>
-    </nav>
-    <section id="about" class="about">
-        <h2 class="section-title">About Us</h2>
-        <p>AvantQuest is a dedicated Roblox development group passionate about creating innovative and immersive gaming experiences. With a team of skilled developers, designers, and storytellers, we strive to push the boundaries of what’s possible on the Roblox platform.</p>
-        <p>From adventure-filled RPGs to thrilling simulators, our games are crafted with precision and a deep love for the Roblox community.</p>
+
+    <section class="hero">
+        <h2>Welcome to AvantQuest</h2>
+        <p>Your premier destination for innovative Roblox development projects.</p>
     </section>
-    <section id="games" class="games">
-        <h2 class="section-title">Our Games</h2>
-        <p>We’re proud to showcase our portfolio of popular Roblox games, each designed to captivate and engage players of all ages.</p>
-        <ul>
-            <li><strong>QuestRunner:</strong> An epic adventure game with quests, battles, and treasure hunts.</li>
-            <li><strong>CityTycoon:</strong> Build your own thriving metropolis and compete with friends.</li>
-            <li><strong>SpeedRush:</strong> A high-speed racing game with dynamic tracks and customizable vehicles.</li>
-        </ul>
-        <a href="#" class="btn">Play Our Games</a>
+
+    <section id="about">
+        <div class="content">
+            <div class="semi-circle"></div>
+            <h3>About Us</h3>
+            <p>AvantQuest is a forward-thinking development group specializing in crafting unique Roblox experiences. From immersive games to powerful tools, we bring your visions to life.</p>
+        </div>
     </section>
-    <section id="discord" class="discord">
-        <h2 class="section-title">Join Our Discord</h2>
-        <p>Be a part of our vibrant community on Discord! Chat with developers, participate in events, and get exclusive sneak peeks at upcoming projects.</p>
-        <a href="https://discord.gg/your-discord-link" target="_blank" class="btn">Join Now</a>
+
+    <section id="services">
+        <div class="content">
+            <h3>Our Services</h3>
+            <p>We offer a range of services including scripting, UI design, 3D modeling, and project management. Our team is dedicated to delivering high-quality results tailored to your needs.</p>
+        </div>
     </section>
+
+    <section id="team">
+        <div class="content">
+            <h3>Meet the Team</h3>
+            <p>Our team consists of talented developers, designers, and creators who are passionate about Roblox. Together, we push the boundaries of what's possible in virtual worlds.</p>
+        </div>
+    </section>
+
+    <section id="contact">
+        <div class="content">
+            <h3>Contact Us</h3>
+            <p>Have a project in mind? Reach out to us and let’s make it happen. Email us at <a href="mailto:malindiboys@gmail.com">contact@avantquest.com</a>.</p>
+        </div>
+    </section>
+
     <footer>
-        <p>&copy; 2024 AvantQuest. All Rights Reserved.</p>
-        <p>Follow us on <a href="#" class="btn">Social Media</a></p>
+        <p>&copy; 2024 AvantQuest. All rights reserved.</p>
     </footer>
 </body>
 </html>
