--- a/index.html
+++ b/index.html
@@ -87,71 +87,52 @@
             position: relative;
         }
 
-        .hero p {
-            font-size: 1.2rem;
-            max-width: 800px;
-            margin: 0 auto;
-            color: #fff;
-        }
-
-        .clock {
+        .analog-clock {
             position: absolute;
             top: 20px;
-            background: rgba(0, 0, 0, 0.7);
-            color: #fff;
-            padding: 10px 20px;
-            border-radius: 30px;
-            font-size: 2rem;
-            animation: slideDown 1s ease-in-out;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            width: 150px;
+            height: 150px;
+            background: rgba(255, 255, 255, 0.9);
+            border: 5px solid #fff;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+            z-index: 1;
         }
 
-        .content {
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 20px;
-            padding: 40px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-            margin: 40px auto;
-            max-width: 800px;
-            text-align: left;
-            animation: slideIn 1.5s ease-in-out;
+        .analog-clock .hand {
+            position: absolute;
+            background: #000;
+            transform-origin: bottom center;
+            border-radius: 4px;
         }
 
-        .semi-circle {
-            display: none;
+        .analog-clock .hour {
+            width: 6px;
+            height: 40px;
+            bottom: 60px;
         }
 
-        footer {
-            background: rgba(0, 0, 0, 0.9);
-            text-align: center;
-            padding: 20px 0;
-            font-size: 0.9rem;
-            color: #aaa;
+        .analog-clock .minute {
+            width: 4px;
+            height: 60px;
+            bottom: 50px;
         }
 
-        @keyframes fadeIn {
-            0% { opacity: 0; }
-            100% { opacity: 1; }
+        .analog-clock .second {
+            width: 2px;
+            height: 70px;
+            bottom: 40px;
+            background: red;
         }
 
-        @keyframes slideIn {
-            0% { transform: translateY(50px); opacity: 0; }
-            100% { transform: translateY(0); opacity: 1; }
-        }
-
-        @keyframes slideDown {
-            0% { transform: translateY(-50px); opacity: 0; }
-            100% { transform: translateY(0); opacity: 1; }
-        }
-
-        @keyframes floatIn {
-            0% { transform: translateY(-30px); opacity: 0; }
-            100% { transform: translateY(0); opacity: 1; }
-        }
-
-        @keyframes floatLetter {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-10px); }
+        .analog-clock .numerals {
+            position: absolute;
+            font-size: 12px;
+            font-weight: bold;
+            color: #000;
         }
 
         @media (max-width: 768px) {
@@ -159,41 +140,34 @@
                 font-size: 2rem;
             }
 
-            .hero p {
-                font-size: 1rem;
+            .analog-clock {
+                width: 100px;
+                height: 100px;
             }
 
-            .clock {
-                font-size: 1.5rem;
+            .analog-clock .hand {
+                width: 1px;
             }
         }
     </style>
     <script>
-        function updateClock() {
+        function updateClockHands() {
             const now = new Date();
-            const hours = String(now.getHours()).padStart(2, '0');
-            const minutes = String(now.getMinutes()).padStart(2, '0');
-            const seconds = String(now.getSeconds()).padStart(2, '0');
-            document.getElementById('clock').textContent = `${hours}:${minutes}:${seconds}`;
+            const seconds = now.getSeconds();
+            const minutes = now.getMinutes();
+            const hours = now.getHours() % 12;
+
+            const secondHand = document.querySelector('.second');
+            const minuteHand = document.querySelector('.minute');
+            const hourHand = document.querySelector('.hour');
+
+            secondHand.style.transform = `rotate(${seconds * 6}deg)`;
+            minuteHand.style.transform = `rotate(${minutes * 6}deg)`;
+            hourHand.style.transform = `rotate(${hours * 30 + minutes / 2}deg)`;
         }
 
-        setInterval(updateClock, 1000);
-        window.onload = updateClock;
-
-        document.querySelectorAll('header nav a').forEach(anchor => {
-            anchor.addEventListener('click', function(e) {
-                e.preventDefault();
-                const targetId = this.getAttribute('href').substring(1);
-                const targetElement = document.getElementById(targetId);
-
-                if (targetElement) {
-                    window.scrollTo({
-                        top: targetElement.offsetTop,
-                        behavior: 'smooth'
-                    });
-                }
-            });
-        });
+        setInterval(updateClockHands, 1000);
+        window.onload = updateClockHands;
     </script>
 </head>
 <body>
@@ -207,7 +181,11 @@
     </header>
 
     <section class="hero">
-        <div class="clock" id="clock">00:00:00</div>
+        <div class="analog-clock">
+            <div class="hand hour"></div>
+            <div class="hand minute"></div>
+            <div class="hand second"></div>
+        </div>
         <h2>
             <span>W</span><span>e</span><span>l</span><span>c</span><span>o</span><span>m</span><span>e</span>
             <span>t</span><span>o</span>
@@ -224,8 +202,7 @@
 
     <section id="projects" class="content">
         <h3>Our Projects</h3>
-        <p>Avant Quest has worked on numerous projects that showcase our creativity and technical expertise. From game development to intricate scripting, we deliver unique experiences that captivate players worldwide.
-        </p>
+        <p>Avant Quest has worked on numerous projects that showcase our creativity and technical expertise. From game development to intricate scripting, we deliver unique experiences that captivate players worldwide.</p>
     </section>
 
     <section id="contact" class="content">
